# AndroidLib

./: build.gradle  settings.gradle
AndroidCodeLib/: build.gradle
AndroidCodeLib/src/androidTest/java/com/zj/androidcodelib/: ExampleInstrumentedTest.java
AndroidCodeLib/src/main/: AndroidManifest.xml
AndroidCodeLib/src/test/java/com/zj/androidcodelib/: ExampleUnitTest.java
AudioModule/: CMakeLists.txt  build.gradle
AudioModule/src/androidTest/java/com/zj/audiomodule/: ExampleInstrumentedTest.java
AudioModule/src/main/: AndroidManifest.xml
AudioModule/src/main/cpp/: ffmpeg_deal.cpp
AudioModule/src/main/cpp/soundtouch/: soundtouch_wapper.cpp
AudioModule/src/main/java/com/zj/audiomodule/audiomanager/: RecordState.java
AudioModule/src/main/java/com/zj/audiomodule/common/: AudioConfig.java
AudioModule/src/main/java/com/zj/audiomodule/jniapi/: JNISoundTouch.java  VideoView.java
AudioModule/src/main/java/com/zj/audiomodule/utils/: AudioPlayerHelper.java  AudioRecordHelper.java  Pcm2WavUtils.java
AudioModule/src/test/java/com/zj/audiomodule/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/lib/danmu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lib/: LibApplication.kt  MainActivity.java
app/src/main/java/com/lib/audio/: AudioUtils.java  ScreenRecordManager.java
app/src/main/java/com/lib/cmdutil/: ExeCommandUtils.java
app/src/main/java/com/lib/danmu/: MainActivity.java
app/src/main/java/com/lib/googleservice/: GoogleServiceManager.java
app/src/main/java/com/lib/javatest/: MathOperater.java
app/src/main/java/com/lib/process/: ProcessMainActivity.java  ProcessSecondActivity.java
app/src/main/res/layout/: audio_record_test_activity_lay.xml  audio_recording_dialog_lay.xml  screen_record_lay.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/lib/danmu/: ExampleUnitTest.java
baselib/: build.gradle
baselib/src/androidTest/java/com/zj/baselib/: ExampleInstrumentedTest.kt
baselib/src/main/: AndroidManifest.xml
customizeview/: build.gradle
customizeview/src/main/: AndroidManifest.xml
customizeview/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
resourcelib/: build.gradle
resourcelib/src/main/: AndroidManifest.xml
resourcelib/src/main/res/values/: colors.xml  strings.xml
(+19 files in other folders)
